fix scroll on iOS

--- a/src/components/layout.styl
+++ b/src/components/layout.styl
@@ -24,6 +24,7 @@
         // min-height: 512px
         background: inherit
         overflow: auto
+        -webkit-overflow-scrolling: touch
         transition: all cubic-bezier(.25,.8,.25,1) .25s, width 0.1ms
         transform-origin: left top
 
